Added a link to the blog posts

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+
 <p>Get your greeting <a href="/greeting">here</a></p>
+
+<p>Click here to go to the blog posts <a href="/blog">here</a></p>
 </body>
 </html>
